parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BACK
    DECADE
    HEX
    INT64
    NOTSO
    SEMI

Grammar

Rule 0     S' -> statement
Rule 1     statement -> statement NEWLINE statement
Rule 2     statement -> statement NEWLINE statement NEWLINE
Rule 3     statement -> exassign
Rule 4     statement -> declare
Rule 5     statement -> exprint
Rule 6     statement -> exif
Rule 7     statement -> exelif
Rule 8     statement -> exloop
Rule 9     statement -> exrepeat
Rule 10    statement -> statement NEWLINE
Rule 11    statement -> NEWLINE statement
Rule 12    statement -> exloop NEWLINE
Rule 13    exif -> SO LPAREN expression RPAREN LSTATE statement RSTATE
Rule 14    exif -> SO LPAREN expression RPAREN NEWLINE LSTATE statement RSTATE
Rule 15    exelif -> exif exelse
Rule 16    exelse -> OTHERWISE LSTATE statement LSTATE OTHERWISE
Rule 17    exelse -> OTHERWISE LSTATE NEWLINE statement RSTATE
Rule 18    exloop -> LOOP LPAREN expression RPAREN LSTATE statement RSTATE
Rule 19    exloop -> LOOP LPAREN expression RPAREN LSTATE NEWLINE statement RSTATE
Rule 20    exrepeat -> REPEAT LPAREN expression RPAREN LSTATE statement RSTATE
Rule 21    exrepeat -> REPEAT LPAREN expression RPAREN NEWLINE LSTATE statement RSTATE
Rule 22    expression -> expression PLUS expression
Rule 23    expression -> term PLUS term
Rule 24    expression -> term PLUS expression
Rule 25    expression -> expression MINUS expression
Rule 26    expression -> term MINUS term
Rule 27    expression -> term MINUS expression
Rule 28    expression -> expression MUL expression
Rule 29    expression -> term MUL term
Rule 30    expression -> term MUL expression
Rule 31    expression -> expression DIV expression
Rule 32    expression -> term DIV term
Rule 33    expression -> term DIV expression
Rule 34    expression -> expression MOD expression
Rule 35    expression -> term MOD term
Rule 36    expression -> term MOD expression
Rule 37    term -> WORD
Rule 38    term -> arraysh
Rule 39    term -> NUM
Rule 40    expression -> term
Rule 41    expression -> MINUS expression
Rule 42    expression -> LPAREN expression RPAREN
Rule 43    exassign -> WORD EQU expression
Rule 44    exassign -> arraysh EQU expression
Rule 45    expression -> expression EQUTO expression
Rule 46    expression -> expression NOEQU expression
Rule 47    expression -> expression LESS expression
Rule 48    expression -> expression MORE expression
Rule 49    declare -> DECL WORD
Rule 50    declare -> DECL WORD EQU term
Rule 51    arraysh -> WORD LARRY NUM RARRY
Rule 52    arraysh -> WORD LARRY WORD RARRY
Rule 53    declare -> DECL WORD EQU LSTATE arrayX RSTATE
Rule 54    declare -> DECL WORD LARRY NUM RARRY
Rule 55    declare -> DECL WORD LARRY NUM RARRY EQU LSTATE arrayX RSTATE
Rule 56    arrayX -> NUM arrayY
Rule 57    arrayY -> COMMA NUM arrayY
Rule 58    arrayY -> empty empty empty
Rule 59    exprint -> TEXT LPAREN WORD printMore RPAREN
Rule 60    printMore -> , expression printMore
Rule 61    printMore -> empty empty empty
Rule 62    empty -> <empty>

Terminals, with rules where they appear

,                    : 60
BACK                 : 
COMMA                : 57
DECADE               : 
DECL                 : 49 50 53 54 55
DIV                  : 31 32 33
EQU                  : 43 44 50 53 55
EQUTO                : 45
HEX                  : 
INT64                : 
LARRY                : 51 52 54 55
LESS                 : 47
LOOP                 : 18 19
LPAREN               : 13 14 18 19 20 21 42 59
LSTATE               : 13 14 16 16 17 18 19 20 21 53 55
MINUS                : 25 26 27 41
MOD                  : 34 35 36
MORE                 : 48
MUL                  : 28 29 30
NEWLINE              : 1 2 2 10 11 12 14 17 19 21
NOEQU                : 46
NOTSO                : 
NUM                  : 39 51 54 55 56 57
OTHERWISE            : 16 16 17
PLUS                 : 22 23 24
RARRY                : 51 52 54 55
REPEAT               : 20 21
RPAREN               : 13 14 18 19 20 21 42 59
RSTATE               : 13 14 17 18 19 20 21 53 55
SEMI                 : 
SO                   : 13 14
TEXT                 : 59
WORD                 : 37 43 49 50 51 52 52 53 54 55 59
error                : 

Nonterminals, with rules where they appear

arrayX               : 53 55
arrayY               : 56 57
arraysh              : 38 44
declare              : 4
empty                : 58 58 58 61 61 61
exassign             : 3
exelif               : 7
exelse               : 15
exif                 : 6 15
exloop               : 8 12
expression           : 13 14 18 19 20 21 22 22 24 25 25 27 28 28 30 31 31 33 34 34 36 41 42 43 44 45 45 46 46 47 47 48 48 60
exprint              : 5
exrepeat             : 9
printMore            : 59 60
statement            : 1 1 2 2 10 11 13 14 16 17 18 19 20 21 0
term                 : 23 23 24 26 26 27 29 29 30 32 32 33 35 35 36 40 50

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . statement NEWLINE statement
    (2) statement -> . statement NEWLINE statement NEWLINE
    (3) statement -> . exassign
    (4) statement -> . declare
    (5) statement -> . exprint
    (6) statement -> . exif
    (7) statement -> . exelif
    (8) statement -> . exloop
    (9) statement -> . exrepeat
    (10) statement -> . statement NEWLINE
    (11) statement -> . NEWLINE statement
    (12) statement -> . exloop NEWLINE
    (43) exassign -> . WORD EQU expression
    (44) exassign -> . arraysh EQU expression
    (49) declare -> . DECL WORD
    (50) declare -> . DECL WORD EQU term
    (53) declare -> . DECL WORD EQU LSTATE arrayX RSTATE
    (54) declare -> . DECL WORD LARRY NUM RARRY
    (55) declare -> . DECL WORD LARRY NUM RARRY EQU LSTATE arrayX RSTATE
    (59) exprint -> . TEXT LPAREN WORD printMore RPAREN
    (13) exif -> . SO LPAREN expression RPAREN LSTATE statement RSTATE
    (14) exif -> . SO LPAREN expression RPAREN NEWLINE LSTATE statement RSTATE
    (15) exelif -> . exif exelse
    (18) exloop -> . LOOP LPAREN expression RPAREN LSTATE statement RSTATE
    (19) exloop -> . LOOP LPAREN expression RPAREN LSTATE NEWLINE statement RSTATE
    (20) exrepeat -> . REPEAT LPAREN expression RPAREN LSTATE statement RSTATE
    (21) exrepeat -> . REPEAT LPAREN expression RPAREN NEWLINE LSTATE statement RSTATE
    (51) arraysh -> . WORD LARRY NUM RARRY
    (52) arraysh -> . WORD LARRY WORD RARRY

    NEWLINE         shift and go to state 2
    WORD            shift and go to state 10
    DECL            shift and go to state 12
    TEXT            shift and go to state 13
    SO              shift and go to state 14
    LOOP            shift and go to state 15
    REPEAT          shift and go to state 16

    statement                      shift and go to state 1
    exassign                       shift and go to state 3
    declare                        shift and go to state 4
    exprint                        shift and go to state 5
    exif                           shift and go to state 6
    exelif                         shift and go to state 7
    exloop                         shift and go to state 8
    exrepeat                       shift and go to state 9
    arraysh                        shift and go to state 11

state 1

    (0) S' -> statement .
    (1) statement -> statement . NEWLINE statement
    (2) statement -> statement . NEWLINE statement NEWLINE
    (10) statement -> statement . NEWLINE

    NEWLINE         shift and go to state 17


state 2

    (11) statement -> NEWLINE . statement
    (1) statement -> . statement NEWLINE statement
    (2) statement -> . statement NEWLINE statement NEWLINE
    (3) statement -> . exassign
    (4) statement -> . declare
    (5) statement -> . exprint
    (6) statement -> . exif
    (7) statement -> . exelif
    (8) statement -> . exloop
    (9) statement -> . exrepeat
    (10) statement -> . statement NEWLINE
    (11) statement -> . NEWLINE statement
    (12) statement -> . exloop NEWLINE
    (43) exassign -> . WORD EQU expression
    (44) exassign -> . arraysh EQU expression
    (49) declare -> . DECL WORD
    (50) declare -> . DECL WORD EQU term
    (53) declare -> . DECL WORD EQU LSTATE arrayX RSTATE
    (54) declare -> . DECL WORD LARRY NUM RARRY
    (55) declare -> . DECL WORD LARRY NUM RARRY EQU LSTATE arrayX RSTATE
    (59) exprint -> . TEXT LPAREN WORD printMore RPAREN
    (13) exif -> . SO LPAREN expression RPAREN LSTATE statement RSTATE
    (14) exif -> . SO LPAREN expression RPAREN NEWLINE LSTATE statement RSTATE
    (15) exelif -> . exif exelse
    (18) exloop -> . LOOP LPAREN expression RPAREN LSTATE statement RSTATE
    (19) exloop -> . LOOP LPAREN expression RPAREN LSTATE NEWLINE statement RSTATE
    (20) exrepeat -> . REPEAT LPAREN expression RPAREN LSTATE statement RSTATE
    (21) exrepeat -> . REPEAT LPAREN expression RPAREN NEWLINE LSTATE statement RSTATE
    (51) arraysh -> . WORD LARRY NUM RARRY
    (52) arraysh -> . WORD LARRY WORD RARRY

    NEWLINE         shift and go to state 2
    WORD            shift and go to state 10
    DECL            shift and go to state 12
    TEXT            shift and go to state 13
    SO              shift and go to state 14
    LOOP            shift and go to state 15
    REPEAT          shift and go to state 16

    statement                      shift and go to state 18
    exassign                       shift and go to state 3
    declare                        shift and go to state 4
    exprint                        shift and go to state 5
    exif                           shift and go to state 6
    exelif                         shift and go to state 7
    exloop                         shift and go to state 8
    exrepeat                       shift and go to state 9
    arraysh                        shift and go to state 11

state 3

    (3) statement -> exassign .

    NEWLINE         reduce using rule 3 (statement -> exassign .)
    $end            reduce using rule 3 (statement -> exassign .)
    LSTATE          reduce using rule 3 (statement -> exassign .)
    RSTATE          reduce using rule 3 (statement -> exassign .)


state 4

    (4) statement -> declare .

    NEWLINE         reduce using rule 4 (statement -> declare .)
    $end            reduce using rule 4 (statement -> declare .)
    LSTATE          reduce using rule 4 (statement -> declare .)
    RSTATE          reduce using rule 4 (statement -> declare .)


state 5

    (5) statement -> exprint .

    NEWLINE         reduce using rule 5 (statement -> exprint .)
    $end            reduce using rule 5 (statement -> exprint .)
    LSTATE          reduce using rule 5 (statement -> exprint .)
    RSTATE          reduce using rule 5 (statement -> exprint .)


state 6

    (6) statement -> exif .
    (15) exelif -> exif . exelse
    (16) exelse -> . OTHERWISE LSTATE statement LSTATE OTHERWISE
    (17) exelse -> . OTHERWISE LSTATE NEWLINE statement RSTATE

    NEWLINE         reduce using rule 6 (statement -> exif .)
    $end            reduce using rule 6 (statement -> exif .)
    LSTATE          reduce using rule 6 (statement -> exif .)
    RSTATE          reduce using rule 6 (statement -> exif .)
    OTHERWISE       shift and go to state 20

    exelse                         shift and go to state 19

state 7

    (7) statement -> exelif .

    NEWLINE         reduce using rule 7 (statement -> exelif .)
    $end            reduce using rule 7 (statement -> exelif .)
    LSTATE          reduce using rule 7 (statement -> exelif .)
    RSTATE          reduce using rule 7 (statement -> exelif .)


state 8

    (8) statement -> exloop .
    (12) statement -> exloop . NEWLINE

  ! shift/reduce conflict for NEWLINE resolved as shift
    $end            reduce using rule 8 (statement -> exloop .)
    LSTATE          reduce using rule 8 (statement -> exloop .)
    RSTATE          reduce using rule 8 (statement -> exloop .)
    NEWLINE         shift and go to state 21

  ! NEWLINE         [ reduce using rule 8 (statement -> exloop .) ]


state 9

    (9) statement -> exrepeat .

    NEWLINE         reduce using rule 9 (statement -> exrepeat .)
    $end            reduce using rule 9 (statement -> exrepeat .)
    LSTATE          reduce using rule 9 (statement -> exrepeat .)
    RSTATE          reduce using rule 9 (statement -> exrepeat .)


state 10

    (43) exassign -> WORD . EQU expression
    (51) arraysh -> WORD . LARRY NUM RARRY
    (52) arraysh -> WORD . LARRY WORD RARRY

    EQU             shift and go to state 22
    LARRY           shift and go to state 23


state 11

    (44) exassign -> arraysh . EQU expression

    EQU             shift and go to state 24


state 12

    (49) declare -> DECL . WORD
    (50) declare -> DECL . WORD EQU term
    (53) declare -> DECL . WORD EQU LSTATE arrayX RSTATE
    (54) declare -> DECL . WORD LARRY NUM RARRY
    (55) declare -> DECL . WORD LARRY NUM RARRY EQU LSTATE arrayX RSTATE

    WORD            shift and go to state 25


state 13

    (59) exprint -> TEXT . LPAREN WORD printMore RPAREN

    LPAREN          shift and go to state 26


state 14

    (13) exif -> SO . LPAREN expression RPAREN LSTATE statement RSTATE
    (14) exif -> SO . LPAREN expression RPAREN NEWLINE LSTATE statement RSTATE

    LPAREN          shift and go to state 27


state 15

    (18) exloop -> LOOP . LPAREN expression RPAREN LSTATE statement RSTATE
    (19) exloop -> LOOP . LPAREN expression RPAREN LSTATE NEWLINE statement RSTATE

    LPAREN          shift and go to state 28


state 16

    (20) exrepeat -> REPEAT . LPAREN expression RPAREN LSTATE statement RSTATE
    (21) exrepeat -> REPEAT . LPAREN expression RPAREN NEWLINE LSTATE statement RSTATE

    LPAREN          shift and go to state 29


state 17

    (1) statement -> statement NEWLINE . statement
    (2) statement -> statement NEWLINE . statement NEWLINE
    (10) statement -> statement NEWLINE .
    (1) statement -> . statement NEWLINE statement
    (2) statement -> . statement NEWLINE statement NEWLINE
    (3) statement -> . exassign
    (4) statement -> . declare
    (5) statement -> . exprint
    (6) statement -> . exif
    (7) statement -> . exelif
    (8) statement -> . exloop
    (9) statement -> . exrepeat
    (10) statement -> . statement NEWLINE
    (11) statement -> . NEWLINE statement
    (12) statement -> . exloop NEWLINE
    (43) exassign -> . WORD EQU expression
    (44) exassign -> . arraysh EQU expression
    (49) declare -> . DECL WORD
    (50) declare -> . DECL WORD EQU term
    (53) declare -> . DECL WORD EQU LSTATE arrayX RSTATE
    (54) declare -> . DECL WORD LARRY NUM RARRY
    (55) declare -> . DECL WORD LARRY NUM RARRY EQU LSTATE arrayX RSTATE
    (59) exprint -> . TEXT LPAREN WORD printMore RPAREN
    (13) exif -> . SO LPAREN expression RPAREN LSTATE statement RSTATE
    (14) exif -> . SO LPAREN expression RPAREN NEWLINE LSTATE statement RSTATE
    (15) exelif -> . exif exelse
    (18) exloop -> . LOOP LPAREN expression RPAREN LSTATE statement RSTATE
    (19) exloop -> . LOOP LPAREN expression RPAREN LSTATE NEWLINE statement RSTATE
    (20) exrepeat -> . REPEAT LPAREN expression RPAREN LSTATE statement RSTATE
    (21) exrepeat -> . REPEAT LPAREN expression RPAREN NEWLINE LSTATE statement RSTATE
    (51) arraysh -> . WORD LARRY NUM RARRY
    (52) arraysh -> . WORD LARRY WORD RARRY

  ! shift/reduce conflict for NEWLINE resolved as shift
    $end            reduce using rule 10 (statement -> statement NEWLINE .)
    LSTATE          reduce using rule 10 (statement -> statement NEWLINE .)
    RSTATE          reduce using rule 10 (statement -> statement NEWLINE .)
    NEWLINE         shift and go to state 2
    WORD            shift and go to state 10
    DECL            shift and go to state 12
    TEXT            shift and go to state 13
    SO              shift and go to state 14
    LOOP            shift and go to state 15
    REPEAT          shift and go to state 16

  ! NEWLINE         [ reduce using rule 10 (statement -> statement NEWLINE .) ]

    statement                      shift and go to state 30
    exassign                       shift and go to state 3
    declare                        shift and go to state 4
    exprint                        shift and go to state 5
    exif                           shift and go to state 6
    exelif                         shift and go to state 7
    exloop                         shift and go to state 8
    exrepeat                       shift and go to state 9
    arraysh                        shift and go to state 11

state 18

    (11) statement -> NEWLINE statement .
    (1) statement -> statement . NEWLINE statement
    (2) statement -> statement . NEWLINE statement NEWLINE
    (10) statement -> statement . NEWLINE

  ! shift/reduce conflict for NEWLINE resolved as shift
    $end            reduce using rule 11 (statement -> NEWLINE statement .)
    LSTATE          reduce using rule 11 (statement -> NEWLINE statement .)
    RSTATE          reduce using rule 11 (statement -> NEWLINE statement .)
    NEWLINE         shift and go to state 17

  ! NEWLINE         [ reduce using rule 11 (statement -> NEWLINE statement .) ]


state 19

    (15) exelif -> exif exelse .

    NEWLINE         reduce using rule 15 (exelif -> exif exelse .)
    $end            reduce using rule 15 (exelif -> exif exelse .)
    LSTATE          reduce using rule 15 (exelif -> exif exelse .)
    RSTATE          reduce using rule 15 (exelif -> exif exelse .)


state 20

    (16) exelse -> OTHERWISE . LSTATE statement LSTATE OTHERWISE
    (17) exelse -> OTHERWISE . LSTATE NEWLINE statement RSTATE

    LSTATE          shift and go to state 31


state 21

    (12) statement -> exloop NEWLINE .

    NEWLINE         reduce using rule 12 (statement -> exloop NEWLINE .)
    $end            reduce using rule 12 (statement -> exloop NEWLINE .)
    LSTATE          reduce using rule 12 (statement -> exloop NEWLINE .)
    RSTATE          reduce using rule 12 (statement -> exloop NEWLINE .)


state 22

    (43) exassign -> WORD EQU . expression
    (22) expression -> . expression PLUS expression
    (23) expression -> . term PLUS term
    (24) expression -> . term PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . term MINUS term
    (27) expression -> . term MINUS expression
    (28) expression -> . expression MUL expression
    (29) expression -> . term MUL term
    (30) expression -> . term MUL expression
    (31) expression -> . expression DIV expression
    (32) expression -> . term DIV term
    (33) expression -> . term DIV expression
    (34) expression -> . expression MOD expression
    (35) expression -> . term MOD term
    (36) expression -> . term MOD expression
    (40) expression -> . term
    (41) expression -> . MINUS expression
    (42) expression -> . LPAREN expression RPAREN
    (45) expression -> . expression EQUTO expression
    (46) expression -> . expression NOEQU expression
    (47) expression -> . expression LESS expression
    (48) expression -> . expression MORE expression
    (37) term -> . WORD
    (38) term -> . arraysh
    (39) term -> . NUM
    (51) arraysh -> . WORD LARRY NUM RARRY
    (52) arraysh -> . WORD LARRY WORD RARRY

    MINUS           shift and go to state 35
    LPAREN          shift and go to state 36
    WORD            shift and go to state 32
    NUM             shift and go to state 38

    expression                     shift and go to state 33
    term                           shift and go to state 34
    arraysh                        shift and go to state 37

state 23

    (51) arraysh -> WORD LARRY . NUM RARRY
    (52) arraysh -> WORD LARRY . WORD RARRY

    NUM             shift and go to state 40
    WORD            shift and go to state 39


state 24

    (44) exassign -> arraysh EQU . expression
    (22) expression -> . expression PLUS expression
    (23) expression -> . term PLUS term
    (24) expression -> . term PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . term MINUS term
    (27) expression -> . term MINUS expression
    (28) expression -> . expression MUL expression
    (29) expression -> . term MUL term
    (30) expression -> . term MUL expression
    (31) expression -> . expression DIV expression
    (32) expression -> . term DIV term
    (33) expression -> . term DIV expression
    (34) expression -> . expression MOD expression
    (35) expression -> . term MOD term
    (36) expression -> . term MOD expression
    (40) expression -> . term
    (41) expression -> . MINUS expression
    (42) expression -> . LPAREN expression RPAREN
    (45) expression -> . expression EQUTO expression
    (46) expression -> . expression NOEQU expression
    (47) expression -> . expression LESS expression
    (48) expression -> . expression MORE expression
    (37) term -> . WORD
    (38) term -> . arraysh
    (39) term -> . NUM
    (51) arraysh -> . WORD LARRY NUM RARRY
    (52) arraysh -> . WORD LARRY WORD RARRY

    MINUS           shift and go to state 35
    LPAREN          shift and go to state 36
    WORD            shift and go to state 32
    NUM             shift and go to state 38

    arraysh                        shift and go to state 37
    expression                     shift and go to state 41
    term                           shift and go to state 34

state 25

    (49) declare -> DECL WORD .
    (50) declare -> DECL WORD . EQU term
    (53) declare -> DECL WORD . EQU LSTATE arrayX RSTATE
    (54) declare -> DECL WORD . LARRY NUM RARRY
    (55) declare -> DECL WORD . LARRY NUM RARRY EQU LSTATE arrayX RSTATE

    NEWLINE         reduce using rule 49 (declare -> DECL WORD .)
    $end            reduce using rule 49 (declare -> DECL WORD .)
    LSTATE          reduce using rule 49 (declare -> DECL WORD .)
    RSTATE          reduce using rule 49 (declare -> DECL WORD .)
    EQU             shift and go to state 42
    LARRY           shift and go to state 43


state 26

    (59) exprint -> TEXT LPAREN . WORD printMore RPAREN

    WORD            shift and go to state 44


state 27

    (13) exif -> SO LPAREN . expression RPAREN LSTATE statement RSTATE
    (14) exif -> SO LPAREN . expression RPAREN NEWLINE LSTATE statement RSTATE
    (22) expression -> . expression PLUS expression
    (23) expression -> . term PLUS term
    (24) expression -> . term PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . term MINUS term
    (27) expression -> . term MINUS expression
    (28) expression -> . expression MUL expression
    (29) expression -> . term MUL term
    (30) expression -> . term MUL expression
    (31) expression -> . expression DIV expression
    (32) expression -> . term DIV term
    (33) expression -> . term DIV expression
    (34) expression -> . expression MOD expression
    (35) expression -> . term MOD term
    (36) expression -> . term MOD expression
    (40) expression -> . term
    (41) expression -> . MINUS expression
    (42) expression -> . LPAREN expression RPAREN
    (45) expression -> . expression EQUTO expression
    (46) expression -> . expression NOEQU expression
    (47) expression -> . expression LESS expression
    (48) expression -> . expression MORE expression
    (37) term -> . WORD
    (38) term -> . arraysh
    (39) term -> . NUM
    (51) arraysh -> . WORD LARRY NUM RARRY
    (52) arraysh -> . WORD LARRY WORD RARRY

    MINUS           shift and go to state 35
    LPAREN          shift and go to state 36
    WORD            shift and go to state 32
    NUM             shift and go to state 38

    expression                     shift and go to state 45
    term                           shift and go to state 34
    arraysh                        shift and go to state 37

state 28

    (18) exloop -> LOOP LPAREN . expression RPAREN LSTATE statement RSTATE
    (19) exloop -> LOOP LPAREN . expression RPAREN LSTATE NEWLINE statement RSTATE
    (22) expression -> . expression PLUS expression
    (23) expression -> . term PLUS term
    (24) expression -> . term PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . term MINUS term
    (27) expression -> . term MINUS expression
    (28) expression -> . expression MUL expression
    (29) expression -> . term MUL term
    (30) expression -> . term MUL expression
    (31) expression -> . expression DIV expression
    (32) expression -> . term DIV term
    (33) expression -> . term DIV expression
    (34) expression -> . expression MOD expression
    (35) expression -> . term MOD term
    (36) expression -> . term MOD expression
    (40) expression -> . term
    (41) expression -> . MINUS expression
    (42) expression -> . LPAREN expression RPAREN
    (45) expression -> . expression EQUTO expression
    (46) expression -> . expression NOEQU expression
    (47) expression -> . expression LESS expression
    (48) expression -> . expression MORE expression
    (37) term -> . WORD
    (38) term -> . arraysh
    (39) term -> . NUM
    (51) arraysh -> . WORD LARRY NUM RARRY
    (52) arraysh -> . WORD LARRY WORD RARRY

    MINUS           shift and go to state 35
    LPAREN          shift and go to state 36
    WORD            shift and go to state 32
    NUM             shift and go to state 38

    expression                     shift and go to state 46
    term                           shift and go to state 34
    arraysh                        shift and go to state 37

state 29

    (20) exrepeat -> REPEAT LPAREN . expression RPAREN LSTATE statement RSTATE
    (21) exrepeat -> REPEAT LPAREN . expression RPAREN NEWLINE LSTATE statement RSTATE
    (22) expression -> . expression PLUS expression
    (23) expression -> . term PLUS term
    (24) expression -> . term PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . term MINUS term
    (27) expression -> . term MINUS expression
    (28) expression -> . expression MUL expression
    (29) expression -> . term MUL term
    (30) expression -> . term MUL expression
    (31) expression -> . expression DIV expression
    (32) expression -> . term DIV term
    (33) expression -> . term DIV expression
    (34) expression -> . expression MOD expression
    (35) expression -> . term MOD term
    (36) expression -> . term MOD expression
    (40) expression -> . term
    (41) expression -> . MINUS expression
    (42) expression -> . LPAREN expression RPAREN
    (45) expression -> . expression EQUTO expression
    (46) expression -> . expression NOEQU expression
    (47) expression -> . expression LESS expression
    (48) expression -> . expression MORE expression
    (37) term -> . WORD
    (38) term -> . arraysh
    (39) term -> . NUM
    (51) arraysh -> . WORD LARRY NUM RARRY
    (52) arraysh -> . WORD LARRY WORD RARRY

    MINUS           shift and go to state 35
    LPAREN          shift and go to state 36
    WORD            shift and go to state 32
    NUM             shift and go to state 38

    expression                     shift and go to state 47
    term                           shift and go to state 34
    arraysh                        shift and go to state 37

state 30

    (1) statement -> statement NEWLINE statement .
    (2) statement -> statement NEWLINE statement . NEWLINE
    (1) statement -> statement . NEWLINE statement
    (2) statement -> statement . NEWLINE statement NEWLINE
    (10) statement -> statement . NEWLINE

  ! shift/reduce conflict for NEWLINE resolved as shift
    $end            reduce using rule 1 (statement -> statement NEWLINE statement .)
    LSTATE          reduce using rule 1 (statement -> statement NEWLINE statement .)
    RSTATE          reduce using rule 1 (statement -> statement NEWLINE statement .)
    NEWLINE         shift and go to state 48

  ! NEWLINE         [ reduce using rule 1 (statement -> statement NEWLINE statement .) ]


state 31
